--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           };
         }
         place = {
-          'current': 0,
+          'current': -1,
           'correct': 0,
           'failed': 0,
           'editMode': false,
@@ -128,6 +128,7 @@
         var data = singleton.data;
         for (var i = 0; i < list.length; i++) {
           if (list[i] == undefined) {
+            place.current = place.current != -1 ? i : place.current;
             continue;
           }
           if (list[i] == data[i].answer) {
@@ -136,7 +137,7 @@
             place.failed++;
           }
         }
-        place.current = list.length   ;
+        place.current = place.current != -1 ? list.length : place.current;
       }
 
       function saveStorage() {
