Change answers display mode

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       #main {
         margin-bottom: 70px;
       }
+      #main button {
+        display: block;
+        text-align: left;
+      }
       .question {
         display: block;
         border: 1px solid black;
