--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <style>
       * {
         font-family: Arial, sans-serif;
+        color:white;
       }
       body {
         height: 100%;
+        background-color: black;
       }
       div.hidden {
         display: none
       }
       button {
         margin: 5px;
-        background-color: white;
-        border: 1px solid black;
+        background-color: black;
+        border: 1px solid white;
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
@@ -32,13 +34,13 @@
       }
       button:disabled {
         background-color: #b7b7b7;
-        box-shadow: 0 0 0 0 black;
-        color: white;
+        box-shadow: 0 0 0 0 white;
+        color: black;
         cursor: default;
       }
       header {
         position: fixed;
-        background-color: white;
+        background-color: black;
         top: 0;
         right: 0;
         width: 100%;
@@ -59,7 +61,7 @@
       }
       .question {
         display: block;
-        border: 1px solid black;
+        border: 1px solid white;
         padding: 10px;
         margin: 10px;
       }
@@ -104,8 +106,8 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.2);
-        background: white;
+        box-shadow: 0px 0px 8px 8px rgba(255, 255, 255, 0.2);
+        background: black;
       }
       #navigation, #navigation input {
         text-align: center;
@@ -113,6 +115,7 @@
       #navigation input {
         padding: 15px 32px;
         width: 80px;
+        background: black;
       }
     </style>
     <script>
