Fix black theme on editing page

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
         margin-top: 5px;
         margin-bottom: 5px;
       }
-      .editQuestion textarea {
+      .editQuestion textarea, .editQuestion input {
         height: 100px;
+        color: black;
       }
       #correctCount, .goodPercentage {
         color: #4CAF50;
