Change font to monospace

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Exam questions</title>
     <style>
       * {
-        font-family: Arial, sans-serif;
+        font-family: "Droid Sans Mono", "Courier", monospace;
         color:white;
       }
       body {
