Turn edit mode into black

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       }
       .editQuestion textarea, .editQuestion input {
         height: 100px;
-        color: black;
+        background: black;
+        color: white;
+        border: 1px solid white;
       }
       #correctCount, .goodPercentage {
         color: #4CAF50;
